--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: autopep8
-        id: autopep8
+      - name: hello
+        id: hello
         uses: actions/hello-world-docker-action@master
         with:
           who-to-greet: 'Mona the Octocat'
