Add GITHUB_SHA to hello

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -16,4 +16,4 @@ jobs:
         id: hello
         uses: actions/hello-world-docker-action@master
         with:
-          who-to-greet: 'Mona the Octocat'
+          who-to-greet: 'Mona the Octocat: $GITHUB_REF, $GITHUB_SHA'
