--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -1,16 +1,34 @@
 name: autopep8
 on: pull_request
+
 jobs:
-  black:
-    runs-on: ubuntu-latest
+
+
+  build:
+    runs-on: ubuntu-16.04
+    strategy:
+      matrix:
+        python-version: [ '2.x', '3.x', 'pypy2', 'pypy3' ]
+    name: Python ${{ matrix.python-version }} sample
     steps:
-      - uses: actions/checkout@v1
-      - name: Black
+      - uses: actions/checkout@master
+      - name: Setup python
         uses: actions/setup-python@v1
-        working-directory: ./api
         with:
-          python-version: '3.6'
-      - run: black --check .
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - run: python --version
+
+        #  black:
+        #    runs-on: ubuntu-latest
+        #    steps:
+        #      - uses: actions/checkout@v1
+        #      - name: Black
+        #        uses: actions/setup-python@v1
+        #        working-directory: ./api
+        #        with:
+        #          python-version: '3.6'
+        #      - run: black --check .
 
   autopep8:
     # Check if the PR is not raised by this workflow and is not from a fork
