--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -5,7 +5,7 @@ jobs:
 
 
   build:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ '2.x', '3.x', 'pypy2', 'pypy3' ]
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: python --version
+      - run: black --check .
 
         #  black:
         #    runs-on: ubuntu-latest
