--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -6,18 +6,15 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ '2.x', '3.x', 'pypy2', 'pypy3' ]
-    name: Python ${{ matrix.python-version }} sample
     steps:
       - uses: actions/checkout@master
       - name: Setup python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
-      - run: black --check .
+          python-version: 3.6
+      - run: |
+          pip install black
+          black --check .
 
         #  black:
         #    runs-on: ubuntu-latest
