--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -12,9 +12,10 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.6
-      - run: |
-          pip install black
-          black --check .
+      - name: Install
+        run: pip install black
+      - name: Black
+        run: black --check .
 
         #  black:
         #    runs-on: ubuntu-latest
