--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -4,7 +4,7 @@ on: pull_request
 jobs:
 
 
-  build:
+  black:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -15,7 +15,7 @@ jobs:
       - name: Install
         run: pip install black
       - name: Black
-        run: black --check .
+        run: black --check --diff .
 
         #  black:
         #    runs-on: ubuntu-latest
