--- a/.github/workflows/autopep8.yml
+++ b/.github/workflows/autopep8.yml
@@ -1,6 +1,20 @@
-name: autopep8
+name: lint
 on: pull_request
+
 jobs:
+  black:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - name: Setup python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.6
+      - name: Install
+        run: pip install black
+      - name: Black
+        run: black --check --diff .
+
   autopep8:
     # Check if the PR is not raised by this workflow and is not from a fork
     if: startsWith(github.head_ref, 'autopep8-patches') == false && github.event.pull_request.head.repo.full_name == github.repository
