--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,21 +8,33 @@ on:
       - master
 
 jobs:
-  hello:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: hello
-        id: hello
-        uses: actions/hello-world-docker-action@master
-        with:
-          who-to-greet: 'Mona the Octocat: $GITHUB_REF, $GITHUB_SHA'
-
   helloworld:
+    name: 'Hello Bash'
+    env:
+      foo: 'foobar'
     runs-on: ubuntu-latest
     steps:
       - name: Hello world
-        run: echo Hello world $GITHUB_REF, $GITHUB_SHA
+        run: echo Hello world $foo, $GITHUB_REF, $GITHUB_SHA
         #        env:
         #          GITHUB_REF: The
         #          Last_Name: Octocat
+
+
+
+
+        #  hello:
+        #    name: 'Hello Action'
+        #    needs: helloworld
+        #    env:
+        #      foo: 'foobar'
+        #    runs-on: ubuntu-latest
+        #    steps:
+        #      - uses: actions/checkout@v1
+        #      - name: hello
+        #        id: hello
+        #        uses: actions/hello-world-docker-action@master
+        #        with:
+        #          who-to-greet: {{ job.env.foo }}
+        #
+        #
